Sun Jan 17 20:10:10 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fixed a logical error and some comments.
	* test/ruby/enc/test_case_mapping.rb: Made tests more general.
	  (with Kimihito Matsui)

Sun Jan 17 17:41:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Removed artificial expansion for Turkic,
	  added hand-coded support for Turkic, fixed logic for swapcase.
	* string.c: Made use of new case mapping code possible from upcase,
	  capitalize, and swapcase (with :lithuanian as a guard).
	* test/ruby/enc/test_case_mapping.rb: Adjusted for above.
	  (with Kimihito Matsui)

Sun Jan 17 15:30:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (sockopt_bool): relax boolean size to be one
	  too not only sizeof(int).  Winsock getsockopt() returns a single
	  byte as a boolean socket option.  [ruby-core:72730] [Bug #11958]

Sun Jan 17 14:43:01 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_env.rb: [Fix GH-1201]
	  * Extract test code for ENV#keep_if from ENV#select_bang
	  * Add a test case for ENV#select_bang,keep_if

Sun Jan 17 14:42:25 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_env.rb: [Fix GH-1201]
	  * Extract test code for ENV#delete_if from ENV#reject_bang
	  * Add a test case for ENV#reject_bang,delete_if

Sun Jan 17 14:40:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (check_size): extract a macro to check
	  binary data size, with a consistent message.

	* ext/socket/option.c (sockopt_byte): fix error message,
	  sizeof(int) differs from sizeof(unsigned char) in general.

Sat Jan 16 21:16:21 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (xstring): reset heredoc indent after dedenting,
	  so that following string literal would not be dedented.
	  [ruby-core:72857] [Bug #11990]

Sat Jan 16 17:24:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Artificial mapping to test buffer expansion code.